k8s/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeting-server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - server.bragin.xyz
      secretName: greeting-server-tls
  rules:
    - host: "server.bragin.xyz"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: greeting-server
                port:
                  number: 8080
